log
Thu 21 Mar 2024 03:30:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c:48:8: error: expected ‘;’ before ‘int’
   48 | AAAAAAA
      |        ^
      |        ;
......
   54 | int sumaLista(List *L) {
      | ~~~     
Compilation failed
653b776
Thu 21 Mar 2024 03:30:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0738508
Thu 21 Mar 2024 03:30:46 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b4820b4
Thu 21 Mar 2024 01:25:34 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |       push_back(L, (void*)malloc(sizeof(int)));
      |       ^~~~~~~~~
      |       pushBack
exercises.c:49:14: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
   49 |       *(int*)last(L) = i;
      |              ^~~~
exercises.c:49:8: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   49 |       *(int*)last(L) = i;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
bcccbf7
Thu 21 Mar 2024 01:28:14 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
27db4e8
Thu 21 Mar 2024 01:31:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
62b8512
Thu 21 Mar 2024 01:32:05 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:23: error: void value not ignored as it ought to be
   48 |      if(dato == NULL) exit(EXIT_FAILURE)
      |                       ^~~~~~~~~~~~~~~~~~
exercises.c:50:15: error: expected expression before ‘List’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |               ^~~~
exercises.c:50:6: error: too few arguments to function ‘pushBack’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |      ^~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:6: note: declared here
   20 | void pushBack(List *L, void *dato);
      |      ^~~~~~~~
In file included from test.c:5:
exercises.c:50:35: error: expected ‘;’ before ‘back’
   50 |      pushBack(List *L, void *dato)back(L, dato);
      |                                   ^~~~
      |                                   ;
Compilation failed
71365f6
Thu 21 Mar 2024 01:33:00 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
adb86b7
Thu 21 Mar 2024 01:33:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
f6211fe
Thu 21 Mar 2024 01:40:40 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 20/70
c57d47e
Thu 21 Mar 2024 01:42:25 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
7a05b9a
Thu 21 Mar 2024 01:53:06 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:101:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  101 |   return 0;
      |          ^
exercises.c:100:6: note: declared here
  100 | void copia_pila(Stack* P1, Stack* P2) {
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e785a87
Thu 21 Mar 2024 01:53:36 PM UTC: 
 exercises.c | 12 +-----------
 1 file changed, 1 insertion(+), 11 deletions(-)
 tests:  2|3
total_score: 20/70
e9e1c55
Thu 21 Mar 2024 01:55:10 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
414ea0d
Thu 21 Mar 2024 01:55:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
a52cef8
Thu 21 Mar 2024 01:56:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
27d3e10
Thu 21 Mar 2024 08:05:25 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|2
total_score: 40/70
ab18fab
Thu 21 Mar 2024 08:10:26 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
1bc2859
Thu 21 Mar 2024 08:11:28 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
b75f3ab
Thu 21 Mar 2024 08:12:20 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 40/70
4b01362
Thu 21 Mar 2024 08:15:14 PM UTC: 
 exercises.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
bcf401f
Thu 21 Mar 2024 08:19:06 PM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:123:21: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  123 |       push(P, cadena[i]);
      |               ~~~~~~^~~
      |                     |
      |                     char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
3ab72d4
Thu 21 Mar 2024 08:19:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
5724932
Thu 21 Mar 2024 08:23:07 PM UTC: 
 exercises.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
 tests:  6|2
total_score: 50/70
87c5d2d
Thu 21 Mar 2024 08:25:03 PM UTC: 
 exercises.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 50/70
43f08ea
Thu 21 Mar 2024 08:27:58 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
5234ca3
Thu 21 Mar 2024 08:31:50 PM UTC: 
 exercises.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
904e4a3
Thu 21 Mar 2024 08:33:37 PM UTC: 
 exercises.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 50/70
1d2fffc
Thu 21 Mar 2024 08:34:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
9745e0b
Thu 21 Mar 2024 08:34:31 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
83a5c46
Thu 21 Mar 2024 08:42:33 PM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 50/70
ae3fb74
Thu 21 Mar 2024 08:43:23 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 50/70
53ac6da
Thu 21 Mar 2024 08:44:51 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|2
total_score: 50/70
bac9fda
